--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "@master/css": "^1.37.2"
   },
   "devDependencies": {
-    "cssnano": "^5.1.13",
-    "postcss": "^8.4.18",
+    "parcel": "^2.7.0",
     "shx": "^0.3.2"
   }
 }
