--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ankademin-quiz",
   "version": "1.0.0",
   "description": "Amazing Quiz",
-  "main": "main.js",
+  "main": "index.html",
   "scripts": {
     "start": "parcel ./index.html",
     "prebuild-dev": "shx rm -rf dist/*",
