--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-dev": "parcel build ./index.html --no-optimize --public-url ./",
     "prebuild": "shx rm -rf dist/*",
     "build": "parcel build ./index.html --public-url ./",
-    "push-gh-pages": "push-dir --dir=dist --branch=gh-pages --cleanup --verbose"
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
